Enhance Product Component: Add validation, default values, and dynamic product types
- Introduced validation for purchaseAmount and saleAmount fields, displaying error states when invalid.
- Set default values for purchaseAmount and saleAmount to 0 in the form.
- Replaced static product type options with dynamic generation from ProductMainType enum, improving maintainability.
- Added isFieldInvalid method to streamline validation checks for form fields.

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -191,6 +191,10 @@
           id="purchaseAmount" 
           formControlName="purchaseAmount" 
           class="form-control"
+          [class.is-invalid]="isFieldInvalid('purchaseAmount')"
+          [value]="0"
+          min="0"
+          step="0.01"
         >
       </div>
 
@@ -203,6 +207,10 @@
           id="saleAmount" 
           formControlName="saleAmount" 
           class="form-control"
+          [class.is-invalid]="isFieldInvalid('saleAmount')"
+          [value]="0"
+          min="0"
+          step="0.01"
         >
       </div>
 
@@ -227,8 +235,9 @@
           formControlName="type" 
           class="form-control"
         >
-          <option value="NOS">NOS</option>
-          <option value="MM">MM</option>
+          <option *ngFor="let type of productTypes" [value]="type.value">
+            {{ type.label }}
+          </option>
         </select>
       </div>
 
