--- a/src/app/shared/components/searchable-select/searchable-select.component.scss
+++ b/src/app/shared/components/searchable-select/searchable-select.component.scss
@@ -8,7 +8,7 @@
     align-items: center;
     
     .search-input {
-      width: 100%;
+      // width: 100%;
       padding: 8px 32px 8px 12px;
       border: 1px solid var(--supporting);
       border-radius: 4px;
