Remove unwanted code & fix some issues.

--- a/src/app/components/shared/product-calculation-dialog/product-calculation-dialog.component.html
+++ b/src/app/components/shared/product-calculation-dialog/product-calculation-dialog.component.html
@@ -57,7 +57,7 @@
                 </td>
               </tr>
             </tbody>
-            <tfoot>
+            <tfoot class="bottom-border">
               <tr>
                 <td>{{ totals.totalFeet }}</td>
                 <td>{{ totals.totalInch }}</td>
